--- a/index.html
+++ b/index.html
@@ -289,16 +289,65 @@
                 const submitting = ref(false);
                 const showSuccess = ref(false);
 
-                const cars = [
-                    { id: 1, plate: 'ญช 908 กท', model: 'Cap', color: 'สีขาว', type: 'Fuel' },
-                    { id: 2, plate: 'ฎฮ 9043 กท', model: 'Optra', color: 'สีดำ', type: 'Fuel' },
-                    { id: 3, plate: '1ขท 3650 กท', model: 'Optra', color: 'สีเทา', type: 'Fuel' },
-                    { id: 4, plate: 'สท 4690 กท', model: 'Optra', color: 'สีขาว', type: 'Fuel' },
-                    { id: 5, plate: '3ขช 2404 กท', model: 'Optra', color: 'สีเงิน', type: 'Fuel' },
-                    { id: 6, plate: '3ขช 3222 กท', model: 'Cap', color: 'สีน้ำตาล', type: 'Fuel' },
-                    { id: 7, plate: 'บ 3004 กท', model: 'MG4', color: 'สีขาว', type: 'EV' },
-                    { id: 8, plate: 'ฮ 2227 กท', model: 'MG4', color: 'สีเทา', type: 'EV' }
-                ];
+                // Cars from Firebase (dynamic)
+                const cars = ref([]);
+
+                // Fetch cars from Firebase with retry
+                const fetchCarsFromFirebase = async (retryCount = 0) => {
+                    console.log('🚗 Fetching cars from Firebase... (attempt ' + (retryCount + 1) + ')');
+
+                    // Wait for Firebase to be ready (max 5 retries)
+                    if (!window.firebaseDB || !window.firebaseRef || !window.firebaseGet) {
+                        if (retryCount < 5) {
+                            console.log('⏳ Firebase not ready, retrying in 500ms...');
+                            setTimeout(() => fetchCarsFromFirebase(retryCount + 1), 500);
+                            return;
+                        }
+                        console.warn('❌ Firebase not ready after 5 retries, using fallback');
+                        cars.value = [
+                            { id: 1, plate: 'ญช 908 กท', model: 'Cap', color: 'สีขาว', type: 'Fuel' },
+                            { id: 2, plate: 'ฎฮ 9043 กท', model: 'Optra', color: 'สีดำ', type: 'Fuel' },
+                            { id: 3, plate: '1ขท 3650 กท', model: 'Optra', color: 'สีเทา', type: 'Fuel' },
+                            { id: 4, plate: 'สท 4690 กท', model: 'Optra', color: 'สีขาว', type: 'Fuel' },
+                            { id: 5, plate: '3ขช 2404 กท', model: 'Optra', color: 'สีเงิน', type: 'Fuel' },
+                            { id: 6, plate: '3ขช 3222 กท', model: 'Cap', color: 'สีน้ำตาล', type: 'Fuel' },
+                            { id: 7, plate: 'บ 3004 กท', model: 'MG4', color: 'สีขาว', type: 'EV' },
+                            { id: 8, plate: 'ฮ 2227 กท', model: 'MG4', color: 'สีเทา', type: 'EV' }
+                        ];
+                        return;
+                    }
+
+                    try {
+                        const carsRef = window.firebaseRef(window.firebaseDB, 'cars');
+                        const snapshot = await window.firebaseGet(carsRef);
+
+                        if (snapshot.exists()) {
+                            const data = snapshot.val();
+                            const carsArray = Object.keys(data)
+                                .filter(k => k !== '_placeholder')
+                                .map(k => ({ firebaseKey: k, ...data[k] }))
+                                .filter(c => c.active !== false)
+                                .sort((a, b) => (a.id || 0) - (b.id || 0));
+
+                            cars.value = carsArray;
+                            console.log('✅ Cars loaded from Firebase:', carsArray.length, carsArray.map(c => c.plate));
+                        } else {
+                            console.warn('No cars in Firebase, using fallback');
+                            cars.value = [
+                                { id: 1, plate: 'ญช 908 กท', model: 'Cap', color: 'สีขาว', type: 'Fuel' },
+                                { id: 2, plate: 'ฎฮ 9043 กท', model: 'Optra', color: 'สีดำ', type: 'Fuel' },
+                                { id: 3, plate: '1ขท 3650 กท', model: 'Optra', color: 'สีเทา', type: 'Fuel' },
+                                { id: 4, plate: 'สท 4690 กท', model: 'Optra', color: 'สีขาว', type: 'Fuel' },
+                                { id: 5, plate: '3ขช 2404 กท', model: 'Optra', color: 'สีเงิน', type: 'Fuel' },
+                                { id: 6, plate: '3ขช 3222 กท', model: 'Cap', color: 'สีน้ำตาล', type: 'Fuel' },
+                                { id: 7, plate: 'บ 3004 กท', model: 'MG4', color: 'สีขาว', type: 'EV' },
+                                { id: 8, plate: 'ฮ 2227 กท', model: 'MG4', color: 'สีเทา', type: 'EV' }
+                            ];
+                        }
+                    } catch (error) {
+                        console.error('❌ Fetch cars error:', error);
+                    }
+                };
 
                 const form = reactive({
                     requester: '',
@@ -323,7 +372,7 @@
                 // Computed: Find the selected car details from our selectable list OR fallback to static list if needed
                 // But stricter is better: find in selectableCars
                 const selectedCar = computed(() => {
-                    return selectableCars.value.find(c => c.id === form.carId) || cars.find(c => c.id === form.carId);
+                    return selectableCars.value.find(c => c.id === form.carId) || cars.value.find(c => c.id === form.carId);
                 });
 
                 const calculatedDistance = computed(() => {
@@ -431,22 +480,30 @@
                                 console.log('✅ Firebase: Return saved successfully');
 
                                 // 2. Update booking status to Returned in /bookings
-                                // Find booking by bookingId and update status
+                                // Find booking by carPlate and update status
                                 const bookingsRef = window.firebaseRef(window.firebaseDB, 'bookings');
                                 const snapshot = await window.firebaseGet(bookingsRef);
                                 if (snapshot.exists()) {
-                                    snapshot.forEach((child) => {
-                                        const booking = child.val();
-                                        // Match by carPlate since we have that info
+                                    const allBookings = snapshot.val();
+                                    console.log('📋 All bookings:', allBookings);
+
+                                    for (const key in allBookings) {
+                                        const booking = allBookings[key];
+                                        console.log(`🔍 Checking booking ${key}:`, booking.carPlate, booking.status);
+
+                                        // Match by carPlate and status Approved
                                         if (booking.carPlate === selectedCar.value.plate && booking.status === 'Approved') {
-                                            const bookingUpdateRef = window.firebaseRef(window.firebaseDB, `bookings/${child.key}`);
-                                            window.firebaseUpdate(bookingUpdateRef, {
+                                            console.log(`✅ Found matching booking: ${key}`);
+                                            const bookingUpdateRef = window.firebaseRef(window.firebaseDB, `bookings/${key}`);
+                                            await window.firebaseUpdate(bookingUpdateRef, {
                                                 status: 'Returned',
                                                 returnedAt: new Date().toISOString()
                                             });
-                                            console.log('✅ Firebase: Booking status updated to Returned for key:', child.key);
+                                            console.log('✅ Firebase: Booking status updated to Returned for key:', key);
                                         }
-                                    });
+                                    }
+                                } else {
+                                    console.log('⚠️ No bookings found in Firebase');
                                 }
                             } catch (firebaseError) {
                                 console.error('❌ Firebase error:', firebaseError);
@@ -468,32 +525,59 @@
                 };
 
                 const fetchMyBookings = async (userId) => {
+                    console.log('🔥 Fetching my bookings from Firebase for user:', userId);
+
                     try {
-                        const response = await fetch(API_URL);
-                        const data = await response.json();
+                        if (!window.firebaseDB || !window.firebaseRef || !window.firebaseGet) {
+                            console.error('❌ Firebase not initialized');
+                            selectableCars.value = [];
+                            return;
+                        }
 
-                        // Filter: My UserID + Status 'Approved' + Personal use only (purpose contains "[ส่วนตัว]")
-                        const myApproved = data.filter(b =>
-                            b.userId === userId &&
-                            b.status === 'Approved' &&
-                            b.purpose && b.purpose.includes('[ส่วนตัว]')
-                        );
+                        const bookingsRef = window.firebaseRef(window.firebaseDB, 'bookings');
+                        const snapshot = await window.firebaseGet(bookingsRef);
 
-                        // Map to selectable options by combining with static car definitions for details
-                        // Booking has: carPlate, carModel. We need to find the matching 'static' car to get its ID, Type, Color
+                        if (!snapshot.exists()) {
+                            console.log('ℹ️ No bookings in Firebase');
+                            selectableCars.value = [];
+                            return;
+                        }
 
+                        const allBookings = snapshot.val();
+
+                        // Filter: My UserID + Status 'Approved' + Personal use only
+                        const myApproved = [];
+                        for (const key in allBookings) {
+                            const b = allBookings[key];
+                            const isMyBooking = b.userId === userId;
+                            const isApproved = b.status === 'Approved';
+                            const isPersonal = b.usageType === 'Personal' ||
+                                (b.combinedPurpose && b.combinedPurpose.includes('[ส่วนตัว]')) ||
+                                (b.purpose && b.purpose.includes('[ส่วนตัว]'));
+
+                            if (isMyBooking && isApproved && isPersonal) {
+                                myApproved.push({
+                                    firebaseKey: key,
+                                    bookingId: b.bookingId || key,
+                                    userId: b.userId,
+                                    carPlate: b.carPlate,
+                                    carModel: b.carModel,
+                                    start: b.startDate || b.start,
+                                    end: b.endDate || b.end,
+                                    purpose: b.combinedPurpose || b.purpose
+                                });
+                            }
+                        }
+
+                        // Map to selectable options by combining with static car definitions
                         const options = [];
-
                         myApproved.forEach(booking => {
-                            // Find car details in our static database based on Plate
-                            // Static cars array: { id, plate, model, color, type }
-                            const carDetails = cars.find(c => c.plate === booking.carPlate);
-
+                            const carDetails = cars.value.find(c => c.plate === booking.carPlate);
                             if (carDetails) {
                                 options.push({
-                                    ...carDetails, // id, plate, model, color, type
-                                    bookingId: booking.id, // Keep track of booking ID if needed
-                                    sheetRow: booking.sheetRow, // Row number in Bookings sheet for easy update
+                                    ...carDetails,
+                                    bookingId: booking.bookingId,
+                                    firebaseKey: booking.firebaseKey,
                                     start: booking.start,
                                     end: booking.end,
                                     displayLabel: `${carDetails.plate} - ${carDetails.model} (${carDetails.color})`
@@ -501,15 +585,13 @@
                             }
                         });
 
-                        // Log for debugging
-                        console.log('My Approved Bookings:', myApproved);
-                        console.log('Selectable Options:', options);
-
+                        console.log('✅ My Approved Personal Bookings:', myApproved.length);
+                        console.log('✅ Selectable Options:', options);
                         selectableCars.value = options;
 
                     } catch (err) {
-                        console.error('Failed to fetch bookings', err);
-                        // Fallback? Or just leave empty
+                        console.error('❌ Firebase fetch error:', err);
+                        selectableCars.value = [];
                     }
                 };
 
@@ -570,6 +652,7 @@
 
                 onMounted(() => {
                     initLiff();
+                    fetchCarsFromFirebase(); // Load cars from Firebase
                 });
 
                 return {
